# cookipedia-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt  scraping_ingredient.py  zappa_settings.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: serializers.py  urls.py
api/views/: users_views.py
certification/: admin.py  models.py  serializers.py  urls.py  views.py
certification/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
common/: paginators.py  utils.py  views.py
config/: custom_storages.py  settings.py  urls.py
food/: models.py
food/migrations/: 0001_initial.py  0002_initial.py
foods/: admin.py  models.py  serializers.py  urls.py  views.py
foods/migrations/: 0001_initial.py
ingredient/: models.py
ingredient/migrations/: 0001_initial.py
ingredients/: admin.py  models.py  serializers.py  urls.py  views.py
ingredients/migrations/: 0001_initial.py  0002_alter_ingredient_expiry_date.py
notifications/: admin.py  models.py  views.py
notifications/migrations/: 0001_initial.py  0002_initial.py
pantries/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
pantries/migrations/: 0001_initial.py  0002_initial.py  0003_statusingredient.py  0004_delete_statusingredient.py  0005_alter_pantry_options.py
pantrys/: apps.py  models.py
parties/: admin.py  models.py  serializers.py  urls.py  views.py
parties/migrations/: 0001_initial.py  (+6 more)
recipes/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+13 files in other folders)
